--- a/templates/results_folder.html
+++ b/templates/results_folder.html
@@ -40,5 +40,7 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <a href="/download_csv/{{ csv_file_name }}" class="download-btn">Download CSV</a>
 </body>
 </html>
